Fix spacing and remove overflow hidden from mainherodiv

--- a/styles.css
+++ b/styles.css
@@ -760,7 +760,7 @@ button {
     position: absolute;
     top: 15vh; }
   .AboutUs-story {
-    transform: translate(0, 50vmin);
+    transform: translate(0, 50vh);
     max-width: 70rem;
     padding: 0 2rem;
     margin: 0 auto;
